# demo-video-recorder

./: .gitignore  AGENT.md  LICENSE  README.md  mac_request_access.py  pyproject.toml  record.py
examples/: guessing_game.py  record_guessing_game.py  record_webui_app.py
examples/webui_app/: index.html
src/demo_video_recorder/: __init__.py  backends.py  cli.py  core.py  defaults.py  errors.py  macos.py  subtitles.py  tts.py  types.py  web.py  windowing.py
tests/: test_backends.py  test_cli.py  test_macos.py  test_subtitles.py  test_tts.py  test_web.py  test_windowing.py
