[project]
name = "demo-video-recorder"
version = "0.1.0"
description = "Scriptable demo video recording for apps, terminals, and AI agents."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
dependencies = [
    "edge-tts>=7.2.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[tool.hatch.build.targets.wheel]
packages = ["src/demo_video_recorder"]

[tool.pytest.ini_options]
testpaths = ["tests"]
